# frostsnap

./: .clippy.toml  .gitignore  .rust-analyzer.json  AppImageBuilder.yml  Cargo.toml  LICENSE  PLAN.md  README.md  SIGNING_WORKFLOW.md  TODO.md  build-deterministic.sh  fetch.just  flake.nix  justfile  rust-toolchain.toml  sdkconfig.defaults  test_gray4.rs
coordinator-cli/: Cargo.toml  README.md
coordinator-cli/src/: db.rs  device_namer.rs  frost_address.rs  io.rs  main.rs  nostr.rs  port_writer.rs  ports.rs  serial.rs  serial_rw.rs  signer.rs  wallet.rs
cst816s/: .gitignore  Cargo.toml  LICENSE  README.md
cst816s/.cargo/: config.toml
cst816s/src/: lib.rs
device/: BOOTLOADER.md  Cargo.toml  README.md  cfg_example.toml  debug-build-differences.sh  deterministic-build.sh  partitions-esp32s3.csv  partitions.csv  partitions.csv.old  tmp.txt
device/.cargo/: config.toml
device/src/: bip39_words.rs  buttons.rs  debug_stats.rs  device_config.rs  device_interface.rs  display_init.rs  display_utils.rs  ds.rs  efuse.rs  erase.rs  esp32_run.rs  esp_ui.rs  factory.rs  firmware.rs  firmware_size.rs  flash.rs  flash_nonce_slot.rs  frosty_ui.rs  io.rs  key_generator.rs  keyboard.rs  lib.rs  main.rs  oled.rs  ota.rs  panic.rs  partitions.rs  peripherals.rs  peripherals_s3.rs  peripherals_s3_fpc.rs  peripherals_s3_waveshare.rs  qemu_display.rs  qemu_touch.rs  resources.rs  root_widget.rs  screen_test.rs  secure_boot.rs  st7735.rs  st7789.rs  stack_guard.rs  (+10 more)
frost-device/: Cargo.toml  cfg_example.toml  sdkconfig.defaults
frost-device/esp32-c3-dkc02-bsc/: Cargo.toml
frost-device/src/: frost_core.rs  main.rs  main_new.rs  message.rs  oled.rs  wifi.rs  ws2812.rs
frost-server/: Cargo.toml  Rocket.toml
frost-server/examples/: client.rs
frost-server/src/: main.rs
frost_backup/: Cargo.toml  README.md
frost_backup/src/: bip39_words.rs  error.rs  lib.rs  recovery.rs  share_backup.rs
frost_backup/tests/: checksum_statistics.rs  descriptor_match.rs  error_handling.rs  proptest.proptest-regressions  proptest.rs  recovery_tests.rs  specification_tests.rs
frostcore/: Cargo.toml
frostcore/src/: state.rs
frostsnap_comms/: Cargo.toml
frostsnap_comms/src/: factory.rs  firmware_reader.rs  fixed_string.rs  genuine_certificate.rs  lib.rs
frostsnap_coordinator/: Cargo.toml
frostsnap_coordinator/src/: backup.rs  backup_run.rs  bitcoin.rs  cdc_acm_usb.rs  check_backup.rs  check_share.rs  display_backup.rs  enter_physical_backup.rs  erase_device.rs  firmware.rs  firmware_bin.rs  firmware_upgrade.rs  frostsnap_persist.rs  keygen.rs  lib.rs  load_share.rs  nonce_replenish.rs  persist.rs  remote_keygen.rs  restore_share.rs  serial_port.rs  settings.rs  signing.rs  ui_protocol.rs  usb_serial_manager.rs  verify_address.rs  wait_for_recovery_share.rs  wait_for_single_device.rs  wait_for_to_user_message.rs
frostsnap_coordinator/tests/: firmware_digest_test.rs  tofu_tests.rs
frostsnap_core/: Cargo.toml  notes.md
frostsnap_core/src/: appkey.rs  bip322.rs  bitcoin_transaction.rs  coord_nonces.rs  coordinator.rs  device.rs  device_nonces.rs  encrypted_share.rs  key_id.rs  lib.rs  macros.rs  map_ext.rs  master_appkey.rs  message.rs  nonce_stream.rs  nostr.rs  sign_task.rs  sqlite.rs  state.rs  symmetric_encryption.rs  tweak.rs  xpub.rs
frostsnap_core/tests/: coordinator_backward_compat.rs  device_backward_compat.rs  endtoend.rs  feerate_calculation.rs  malicious.rs  nonce_generation.rs  proptest.proptest-regressions  proptest.rs  remote_keygen.rs  remote_keygen_proptest.rs  remote_recovery.rs  remote_signing.rs  restoration.rs  share_location.rs  test_utils.rs  wrong_poly.rs
frostsnap_embedded/: Cargo.toml
frostsnap_embedded/src/: ab_write.rs  connection.rs  device_hal.rs  device_loop.rs  erase.rs  flash_header.rs  flash_log.rs  framed_serial.rs  frosty_ui.rs  lib.rs  nonce_slots.rs  nor_flash_log.rs  partition.rs  root_widget.rs  secrets.rs  test.rs  touch_handler.rs  ui.rs
frostsnap_embedded_widgets/: Cargo.toml  README.md  generate_bitcoin_bitmap.py  test_gat  test_hold_checkmark.sh
frostsnap_embedded_widgets/examples/: color_map_demo.rs  measure_font.rs  vec_framebuffer_demo.rs
frostsnap_embedded_widgets/src/: alignment.rs  animation_speed.rs  any_of.rs  bitcoin_amount_display.rs  bitmap.rs  bobbing_carat.rs  buffered.rs  center.rs  checkmark.rs  circle_button.rs  color_map.rs  color_pixel_recorder.rs  column.rs  compressed_point.rs  container.rs  cursor.rs  demo_widget.rs  device_name.rs  either.rs  expanded.rs  fade_switcher.rs  fader.rs  firmware_upgrade.rs  firmware_upgrade_progress.rs  font_demo.rs  fps.rs  fraction.rs  free_cropped.rs  gray_theme.rs  hold_to_confirm.rs  hold_to_confirm_border.rs  hold_to_confirm_button.rs  hold_to_confirm_checkmark.rs  icon.rs  icons.rs  image.rs  key_touch.rs  keygen_check.rs  lib.rs  memory_debug.rs  (+42 more)
frostsnap_embedded_widgets/tests/: fader.rs  image_framebuffer.rs  rat.rs  snapshot.rs  vec_framebuffer.rs
frostsnap_ext/: Cargo.toml
frostsnap_ext/src/: lib.rs  nostr.rs  sign_messages.rs
frostsnap_factory/: Cargo.toml  PROVISIONING.md
frostsnap_factory/bootloader/: CMakeLists.txt  flake.nix  sdkconfig.defaults  sdkconfig.defaults.dev
frostsnap_factory/src/: batch_flash.rs  cli.rs  db.rs  ds.rs  genuine_certificate.rs  genuine_check.rs  main.rs  process.rs  secure_boot.rs  serial_number.rs
frostsnap_nostr/: Cargo.toml
frostsnap_nostr/src/: channel.rs  channel_runner.rs  client.rs  events.rs  identity.rs  lib.rs  settings.rs
frostsnap_nostr/tests/: keygen_live.rs  recovery_live.rs  signing_live.rs
frostsnap_widgets/: Cargo.toml  build.rs
frostsnap_widgets/fonts/: gray4_font.rs  gray4_text.rs  mod.rs
frostsnap_widgets/src/: aa_rounded_rect.rs  address_display.rs  address_framebuffer.rs  animation_speed.rs  bip322_confirm.rs  bitcoin_amount_display.rs  bitmap.rs  bmp_image.rs  bobbing_carat.rs  bobbing_carat_small.rs  checkmark.rs  circle_button.rs  circle_button_data.rs  compressed_point.rs  cursor.rs  debug.rs  delay.rs  demo_widget.rs  device_name.rs  fader.rs  (+51 more)
simplecam/: Cargo.toml
widget_simulator/: Cargo.toml
(+648 files in other folders)
