[workspace]

members = [
    "frostsnap_core",
    "device",
    "frostsnap_coordinator",
    "frostsnap_comms",
    "frostsnapp/native",
    "frostsnap_embedded",
]
resolver = "2"


[workspace.dependencies]
bincode = { version = "2.0.0-rc.3", features = [
    "serde",
    "alloc",
    "derive",
], default-features = false }
serde = { version = "1", features = [
    "derive",
    "alloc",
], default-features = false }
frostsnap_core = { path = "frostsnap_core", default-features = false }
frostsnap_comms = { path = "frostsnap_comms", default-features = false }
frostsnap_coordinator = { path = "frostsnap_coordinator" }
frostsnap_device = { path = "device" }
frostsnap_embedded = { path = "frostsnap_embedded", default-features = false }
tracing = { version = "0.1", default-features = false }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rand_chacha = { version = "0.3", default-features = false }
sha2 = { version = "0.10", default-features = false }
bitcoin = { version = "0.32", features = ["serde"], default-features = false }
bdk_coin_select = { version = "0.3" }
rand_core = "0.6"
futures = "0.3.31"
embedded-storage = "0.3.1"

[patch.crates-io]
schnorr_fun = { git = "https://github.com/LLFourn/secp256kfun.git", rev = "35b5c12fd6ca730dfe74b95255a64997e26a369b" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
# LLVM can perform better optimizations using a single thread
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
