[package]
name = "coordinator-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive", "serde", "std"] } 
frostsnap_core = { path = "../frostsnap_core", features = ["std"] }
frostsnap_comms = { path = "../frostsnap_comms" }
sha2 = "0.9"
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.21"
serialport = "4.2.0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
home = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
nostr = "0.21.0"
hex = "0.4.3"
tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"]}
bdk_chain = { rev = "cd096df9568a1bb7160482f7c36c807cce1b0b5d", git = "https://github.com/evanlinjin/bdk.git", features = ["serde"]  }
bdk_electrum = { rev = "cd096df9568a1bb7160482f7c36c807cce1b0b5d", git = "https://github.com/evanlinjin/bdk.git"  }
bdk_file_store = { rev = "cd096df9568a1bb7160482f7c36c807cce1b0b5d", git = "https://github.com/evanlinjin/bdk.git" }
bdk_coin_select = { rev = "9129b43f1ee75185f3cc3a0f27edcd00df59a61d", git = "https://github.com/llfourn/bdk.git" }
