[package]
name = "coordinator-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive", "serde", "std"] } 
frostsnap_core = { path = "../frostsnap_core", features = ["std"] }
frostsnap_comms = { path = "../frostsnap_comms" }
hex = "0.4.3"
sha2 = "0.9"
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.21"
serialport = "4.2.0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
home = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
bdk_chain = { rev = "26ade1172622f66cb95c831c4a8e7535409e8e81", git = "https://github.com/bitcoindevkit/bdk.git", features = ["serde"]  }
bdk_electrum = { rev = "26ade1172622f66cb95c831c4a8e7535409e8e81", git = "https://github.com/bitcoindevkit/bdk.git"  }
bdk_file_store = { rev = "26ade1172622f66cb95c831c4a8e7535409e8e81", git = "https://github.com/bitcoindevkit/bdk.git" }
bdk_coin_select = { rev = "9129b43f1ee75185f3cc3a0f27edcd00df59a61d", git = "https://github.com/llfourn/bdk.git" }
bech32 = "0.9.1"
tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }
