[package]
name = "coordinator-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frostsnap_core = { workspace = true, features = ["std", "serde_json"] }
frostsnap_comms = { workspace = true }
frostsnap_coordinator = { workspace = true }
hex = "0.4.3"
sha2 = "0.9"
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.21"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
home = "0.5"
tracing = { workspace = true }
tracing-subscriber = "0.3"
bdk_chain = {  version = "0.5",  features = ["serde"]  }
bdk_electrum = { version = "0.3"  }
bdk_file_store = { version = "0.2" }
bdk_coin_select = { rev = "9129b43f1ee75185f3cc3a0f27edcd00df59a61d", git = "https://github.com/llfourn/bdk.git" }
bech32 = "0.9.1"
tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }
bincode = {workspace = true, features = ["std"]}
