[package]
name = "frostsnap_cst816s"
version = "0.1.0"
authors = ["Frostsnap Developers", "Todd Stellanova <tstellanova@users.noreply.github.com>","Felix Weidinger <felix-weidinger@outlook.de>"]
edition = "2024"
description = "CST816S touchscreen driver with ESP32 interrupt support for Frostsnap"
license = "BSD-3-Clause"
repository = "https://github.com/frostsnap/frostsnap"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "CST816S",
    "touchscreen",
]
readme = "README.md"

[features]
default = ["chip-esp32c3"]
chip-esp32c3 = ["esp-hal/esp32c3"]
chip-esp32s3 = ["esp-hal/esp32s3"]

[dependencies]
embedded-hal.workspace = true
esp-hal.workspace = true
heapless = { version = "0.8", features = ["portable-atomic"] }
