[package]
name = "frostsnap_device"
version = "0.1.0"
authors = ["nickfarrow <nick@nickfarrow.com>"]
edition = "2021"

[features]
default = ["stack_guard"]
mem_debug = []
debug_fps = []
debug_mem = []
debug_log = []
debug = [ "debug_fps", "debug_mem", "debug_log" ]
prefill-words = []
# turns on the esp32c3 hardware stack guard
stack_guard = []
# FIXME: remove this feature when v2.rs is deleted (only used in legacy factory code)
genuine_device = []

[dependencies]
frostsnap_core = { workspace = true }
frostsnap_comms = { workspace = true }
frostsnap_embedded = { workspace = true }
frost_backup = { workspace = true, features = ["bincode"] }
bitcoin.workspace = true
esp-hal = { workspace = true, features = ["esp32c3", "digest"] }
rand_core.workspace = true
esp-alloc = "0.5.0"
nb = "1"
embedded-hal-nb = "1"
heapless = "0.8"
critical-section = "1.2"
embedded-hal-bus = "0.1.0"
embedded-hal.workspace = true
embedded-storage.workspace = true
esp-storage = { version = "0.6.0", features = ["esp32c3", "bytewise-read"] }
esp-partition-table = "0.1"
bincode = { workspace = true }
display-interface = { version = "0.5.0" }
display-interface-spi = { version = "0.5.0" }
mipidsi = { version = "0.8.0", features = ["batch"] }
embedded-graphics = "0.8.1"
u8g2-fonts = { version = "0.3.0", features = ["embedded_graphics_textstyle"] }
rand_chacha = { workspace = true }
frostsnap_cst816s = { workspace = true }
embedded-iconoir = { version = "0.2.3", features = ["24px", "32px", "48px"] }
fugit = "0.3.7"
crc = "3"
micromath = "*"
reed-solomon = "0.2.1"
frostsnap_widgets = { workspace = true }
frostsnap_macros = { path = "../macros" }

[[bin]]
name = "dev"
path = "src/bin/dev.rs"

[[bin]]
name = "frontier"
path = "src/bin/frontier.rs"

[[bin]]
name = "widget_dev"
