[package]
name = "frostsnap_device"
version = "0.1.0"
authors = ["nickfarrow <nick@nickfarrow.com>"]
edition = "2021"

[features]
default = ["chip-esp32c3", "stack_guard", "firmware"]
chip-esp32c3 = [
    "esp-hal/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-storage/esp32c3",
    "frostsnap_cst816s/chip-esp32c3",
    "frostsnap_widgets/chip-esp32c3",
    "firmware",
]
chip-esp32s3 = [
    "esp-hal/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-storage/esp32s3",
    "frostsnap_cst816s/chip-esp32s3",
    "frostsnap_widgets/chip-esp32s3",
]
firmware = [
    "dep:frostsnap_core",
    "dep:frostsnap_comms",
    "dep:frostsnap_embedded",
    "dep:frost_backup",
    "dep:bitcoin",
]
mem_debug = []
debug_fps = []
debug_mem = []
debug_log = []
debug = [ "debug_fps", "debug_mem", "debug_log" ]
prefill-words = []
# turns on the esp32c3 hardware stack guard
stack_guard = []
# FIXME: remove this feature when v2.rs is deleted (only used in legacy factory code)
genuine_device = []

[dependencies]
frostsnap_core = { workspace = true, optional = true }
frostsnap_comms = { workspace = true, optional = true }
frostsnap_embedded = { workspace = true, optional = true }
frost_backup = { workspace = true, features = ["bincode"], optional = true }
bitcoin = { workspace = true, optional = true }
esp-hal = { workspace = true, features = ["rt"] }
rand_core.workspace = true
esp-alloc = { workspace = true }
esp-bootloader-esp-idf.workspace = true
nb = "1"
embedded-hal-nb = "1"
heapless = "0.8"
critical-section = "1.2"
embedded-hal-bus = "0.3"
embedded-hal.workspace = true
embedded-storage.workspace = true
esp-storage = { workspace = true, features = ["bytewise-read"] }
bincode = { workspace = true }
mipidsi = { version = "0.10", features = ["batch"] }
embedded-graphics = "0.8.1"
rand_chacha = { workspace = true }
frostsnap_cst816s = { workspace = true }
embedded-iconoir = { version = "0.2.3", features = ["24px", "32px", "48px"] }
fugit = "0.3.7"
crc.workspace = true
micromath = "*"
reed-solomon = "0.2.1"
frostsnap_widgets = { workspace = true }
frostsnap_macros = { path = "../macros" }

[[bin]]
name = "legacy"
path = "src/bin/legacy.rs"

[[bin]]
name = "frontier"
path = "src/bin/frontier.rs"

[[bin]]
name = "widget_dev"
