[package]
name = "myproject"
version = "0.1.0"
authors = ["nickfarrow <nick@nickfarrow.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# pio = ["esp-idf-sys/pio"]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
schnorr_fun = { git = "https://github.com/LLFourn/secp256kfun", rev = "a9a306bb2c76aff3d73bfad07087b0976737f71d" }
# rand = "0.8.5"
rand = "0.8"
sha2 = "0.10"
rng = "0.1.0"
anyhow = "1"


[build-dependencies]
embuild = "0.29"
anyhow = "1"