[package]
name = "frostdevice"
version = "0.1.0"
authors = ["nickfarrow <nick@nickfarrow.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
# default = ["native"]
# native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-svc = { version= "=0.43.5", features = ["experimental", "alloc"] }
embedded-svc = { version = "0.23.2", features = ["experimental"] }
esp-idf-sys = { version = "0.31.12", features = ["binstart"] }
esp-idf-hal = "0.39.4"
# esp32c3 = { version = "0.5.1" }
schnorr_fun = { git = "https://github.com/LLFourn/secp256kfun", rev = "a9a306bb2c76aff3d73bfad07087b0976737f71d", features = ["serde"] }
#schnorr_fun = { path = "/home/nick/repos/secp256kfun/schnorr_fun", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
rng = "0.1.0"
anyhow = "1"
toml-cfg = "0.1.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
log = "0.4"

[build-dependencies]
embuild = { version = "0.30.4", features = ["elf"] }
anyhow = "1"

[package.metadata.espflash]
# bootloader      = "bootloader.bin" # Must be a binary file
partition_table = "partitions.csv" # Supports CSV and binary formats
# format          = "direct-boot"    # Can be 'esp-bootloader' or 'direct-boot'