[package]
name = "frostcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
sha2 = "0.10"
rng = "0.1.0"
anyhow = "1"
toml-cfg = "0.1.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
log = "0.4"
bincode = "1.3.3"
schnorr_fun = { version = "0.8.2", features = ["serde"] }
