[package]
name = "frostsnap_comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frostsnap_core = { workspace = true  }
serde = { workspace = true }
bincode =  { workspace = true }

[features]
std = []
coordinator = ["std", "frostsnap_core/coordinator"]
default = ["coordinator"]
