[package]
name = "frostsnap_coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
frostsnap_comms = { workspace = true, features = ["coordinator"] }
frostsnap_core = { workspace = true, features = ["coordinator", "rusqlite"] }
frostsnap_macros.workspace = true
bincode = { workspace = true, features = ["std"] }
tracing = { workspace = true }
serialport = { version = "4.6", default-features = false }            # default-features = false so no libudev
rand_core.workspace = true
rusqlite.workspace = true
futures.workspace = true
rand.workspace = true
nusb = { version = "0.2", features = ["tokio"] }
sha2 = { workspace = true, features = ["oid"] }
rsa.workspace = true
serde = { version = "1.0", features = ["derive"] }

bdk_core = { version = "0.6" }
bdk_chain = { version = "0.23", features = ["rusqlite"] }
bdk_electrum_streaming = { version = "0.5.2" }
bdk_coin_select = { version = "0.4.1" }


tokio = { version = "1.45", features = ["net", "rt", "time", "macros"] }
rustls = { version = "0.23", default-features = false, features = ["tls12", "ring"] }
rustls-pki-types = { version = "1" }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
tokio-util = { version = "0.7", features = ["compat"] }
webpki-roots = "0.26"

[dev-dependencies]
tempfile = "3.8"

