[package]
name = "frostsnap_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6", default-features = false }
schnorr_fun = { version = "0.10", features = ["bincode", "serde","alloc", "share_backup", "libsecp_compat"], default-features = false }
rand_chacha = { workspace = true }
sha2.workspace = true
chacha20 = { version = "0.9", default-features = false }
serde = { workspace = true }
bitcoin = { workspace = true }
bincode = { workspace = true }
serde_json = { version = "1", optional = true }
tracing = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
rand = "0.8"

[features]
std = ["tracing?/std"]
default = ["std", "serde_json"]
