[package]
name = "frostsnap_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6", default-features = false }
schnorr_fun = { workspace = true, features = ["bincode", "serde","alloc", "share_backup", "libsecp_compat_0_29", "vrf_cert_keygen"] }
rand_chacha = { workspace = true }
frostsnap_macros = { workspace = true }
frost_backup = { workspace = true, default-features = false }
sha2.workspace = true
chacha20 = { version = "0.9", default-features = false }
cipher = { version = "0.4", features = [ "rand_core" ], default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false }
serde = { workspace = true }
bitcoin = { workspace = true }
bincode = { workspace = true }
serde_json = { version = "1", optional = true }
tracing = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8"
proptest-state-machine = "0.3"
proptest = "=1.6.0"
# Independent BIP-322 implementation used only to cross-verify our signatures in tests.
# Dev-dependencies are never compiled into firmware, so this does not affect no_std/deterministic builds.
bip322 = "0.0.10"
bitcoin = { workspace = true, features = ["std", "rand-std"] }

[features]
std = ["tracing?/std", "schnorr_fun/std"]
coordinator = ["std", "tracing", "rusqlite"]
default = ["coordinator", "serde_json"]
