[package]
name = "frostsnap_embedded_widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
u8g2-fonts = { version = "0.3.0", features = ["embedded_graphics_textstyle"] }
embedded-iconoir = { version = "0.2.3", features = ["24px", "32px", "48px"] }
micromath = "0.2"
frostsnap_backup = { workspace = true }

# For the simulator binary
[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
embedded-graphics-simulator = "0.6.0"
rand = "0.8"

[[bin]]
name = "simulate"
required-features = []

