[package]
name = "frostsnap_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_chain = { git = "https://github.com/nickfarrow/bdk.git", default-features = false }
schnorr_fun = { git = "https://github.com/llfourn/secp256kfun.git", features = ["serde", "alloc" ], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", features = ["alloc"], default-features = false }
sha2 = {  version = "0.10", default-features = false }

[features]
std = []
default = ["std"]
